--- a/Module-2-HTML&CSS/06-CSS-Flexbox&Grid/exercises/01-Media-Query-Screen/Unsolved/assets/css/style.css
+++ b/Module-2-HTML&CSS/06-CSS-Flexbox&Grid/exercises/01-Media-Query-Screen/Unsolved/assets/css/style.css
@@ -35,5 +35,16 @@ header {
 }
 
 /* TODO: Use media query to change the width of the cards so they split into two columns at 992px or smaller*/
-
+@media screen and (max-width: 992px) {
+  .card {
+    background-color: #772014;
+    width: 50%;
+  }
+}
 /* TODO: Use media query to change the width of the cards so they are stacked on top of each other at 768px or smaller */
+@media screen and (max-width: 768px) {
+  .card {
+    background-color: #bb8588;
+    width: 50%
+  }
+}
