--- a/Module-2-HTML&CSS/06-CSS-Flexbox&Grid/exercises/05-Box-Styling/Unsolved/assets/css/style.css
+++ b/Module-2-HTML&CSS/06-CSS-Flexbox&Grid/exercises/05-Box-Styling/Unsolved/assets/css/style.css
@@ -67,13 +67,17 @@ footer {
 .card {
   border-style: solid;
   border-width: 1px;
+  border-radius: 50px;
+  box-shadow: 10px 9px 15px #a1a1a1;
   padding: 10px;
   margin: 20px;
   flex: 0 0 300px;
+  transform: rotate(7deg);
 }
 
 .card header {
   padding: 20px;
+  border-radius: 50px 50px 0 0;
 }
 
 .card p {
